--- a/Assets/Resources/lang/en.json
+++ b/Assets/Resources/lang/en.json
@@ -1,6 +1,6 @@
 {
   "Title": "Naval Warfare",
-  "StartGameButton": "Start Game",
+  "PlayButton": "Play",
   "StoreButton": "Store",
   "SettingsButton": "Settings",
   "AchievementsButton": "Achievements",
