--- a/Assets/Resources/lang/ru.json
+++ b/Assets/Resources/lang/ru.json
@@ -1,6 +1,6 @@
 {
   "Title": "Naval Warfare",
-  "StartGameButton": "Начать игру",
+  "PlayButton": "Играть",
   "StoreButton": "Магазин",
   "SettingsButton": "Настройки",
   "AchievementsButton": "Достижения",
