--- a/Assets/Resources/lang/en.json
+++ b/Assets/Resources/lang/en.json
@@ -9,5 +9,6 @@
   "Language": "Language",
   "FirstPurchase": "First Purchase",
   "BuyYourFirstMap": "Buy your first map.",
-  "Unlocked": "Unlocked"
+  "Unlocked": "Unlocked",
+  "WinTenTimes": "Win 10 times"
 }
