--- a/Assets/Resources/lang/ru.json
+++ b/Assets/Resources/lang/ru.json
@@ -9,5 +9,6 @@
   "Language": "Язык",
   "FirstPurchase": "Первая покупка",
   "BuyYourFirstMap": "Купи свою первую тему.",
-  "Unlocked": "Открыто"
+  "Unlocked": "Открыто",
+  "WinTenTimes": "Победи 10 раз"
 }
