--- a/Assets/Resources/lang/en.json
+++ b/Assets/Resources/lang/en.json
@@ -8,6 +8,8 @@
   "FramesPerSecond": "Frames Per Second",
   "Language": "Language",
   "Unlocked": "Unlocked",
+  "Audio": "Audio",
+  "Music": "Music",
   "FirstMapBought_Name": "First Purchase",
   "FirstMapBought_UnlockCondition": "Buy your first map",
   "WinTenTimes_Name": "Consecutive wins: Islands",
