--- a/Assets/Resources/lang/en.json
+++ b/Assets/Resources/lang/en.json
@@ -10,6 +10,7 @@
   "Unlocked": "Unlocked",
   "Audio": "Audio",
   "Music": "Music",
+  "Sfx": "Sound Effects",
   "FirstMapBought_Name": "First Purchase",
   "FirstMapBought_UnlockCondition": "Buy your first map",
   "WinTenTimes_Name": "Consecutive wins: Islands",
