--- a/Assets/Resources/lang/ru.json
+++ b/Assets/Resources/lang/ru.json
@@ -8,6 +8,9 @@
   "FramesPerSecond": "Кадры в секунду",
   "Language": "Язык",
   "Unlocked": "Открыто",
+  "Audio": "Аудио",
+  "Music": "Музыка",
+  "Sfx": "Звуковые эффекты",
   "FirstMapBought_Name": "Первая покупка",
   "FirstMapBought_UnlockCondition": "Купи свою первую тему",
   "WinTenTimes_Name": "Победы подряд: Islands",
