--- a/Assets/Resources/lang/ru.json
+++ b/Assets/Resources/lang/ru.json
@@ -11,6 +11,7 @@
   "Audio": "Аудио",
   "Music": "Музыка",
   "Sfx": "Звуковые эффекты",
+  "UI": "Интерфейс",
   "FirstMapBought_Name": "Первая покупка",
   "FirstMapBought_UnlockCondition": "Купи свою первую тему",
   "WinTenTimes_Name": "Победы подряд: Islands",
