Bug fixes and visual updates

--- a/Assets/StreamingAssets/lang/en.json
+++ b/Assets/StreamingAssets/lang/en.json
@@ -5,6 +5,13 @@
   "SettingsButton": "Settings",
   "AchievementsButton": "Achievements",
   "BackButton": "Back",
+  "UnlimitedButton": "Unlimited",
+  "ReadyToggle": "Ready",
+  "RandomizeButton": "Randomize",
+  "BattleResults_YouWon": "You Won",
+  "BattleResults_YouLost": "You Lost",
+  "BattleResults_Restart": "Play Again",
+  "BattleResults_MainMenuButton": "Main Menu",
   "FramesPerSecond": "Frames Per Second",
   "Language": "Language",
   "Unlocked": "Unlocked",
