--- a/Assets/StreamingAssets/lang/ru.json
+++ b/Assets/StreamingAssets/lang/ru.json
@@ -5,6 +5,13 @@
   "SettingsButton": "Настройки",
   "AchievementsButton": "Достижения",
   "BackButton": "Назад",
+  "UnlimitedButton": "Много",
+  "ReadyToggle": "Готов",
+  "RandomizeButton": "Случайно",
+  "BattleResults_YouWon": "Победа",
+  "BattleResults_YouLost": "Поражение",
+  "BattleResults_Restart": "Играть снова",
+  "BattleResults_MainMenuButton": "Главное Меню",
   "FramesPerSecond": "Кадры в секунду",
   "Language": "Язык",
   "Unlocked": "Открыто",
